Header Nav y Footer

--- a/html/experiencia.html
+++ b/html/experiencia.html
@@ -2,9 +2,43 @@
 <html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <meta name="viewport" content="width=device-width">
+    <title>Experiencia de Alvaro Achá</title>
   </head>
   <body>
-
+    <header>
+      <svg width="250px" height="100px" viewBox="0 0 250 100">
+        <image xlink:href="../images/iniciales.svg"/>
+      </svg>
+      <h1>Curriculum Vitae</h1>
+        <h2>Nombres: </h2>
+          <h3>Alvaro Andrés</h3>
+        <h2>Apellidos:</h2>
+          <h3>Achá Bejarano</h3>
+        <h2>Fecha de Nacimiento:</h2>
+          <h3>20 de Marzo de 1991</h3>
+        <h2>Lugar de Nacimiento:</h2>
+          <h3>Cochabamba, Bolivia</h3>
+    </header>
+    <nav>
+      <a href="../index.html">Inicio</a> |
+      <a href="educacion.html">Educación</a> |
+      <a href="experiencia.html">Experiencia</a>
+    </nav>
+    <section>
+      <article>
+        <h2>Experiencia</h2>
+      </article>
+    </section>
+    <footer>
+      <p>Si tienen alguna duda o consulta porfavor no duden en contactarme:</p>
+      <p>
+        <strong>Email: </strong>alvaro_a132@hotmail.com
+        <br>
+        <strong>Teléfono: </strong>+591 70357636
+        <br>
+        <strong>Dirección: </strong>Cato Rojas N° 1649
+      </p>
+    </footer>
   </body>
 </html>
