Implementacion de Video y Audio

--- a/html/experiencia.html
+++ b/html/experiencia.html
@@ -26,9 +26,25 @@
       <a href="experiencia.html">Experiencia</a>
     </nav>
     <section>
-      <article>
-        <h2>Experiencia</h2>
-      </article>
+      <h2>Experiencia</h2>
+        <article>
+          <h3>Habilidades Profesionales</h3>
+            <video controls width="300px" preload="auto">
+              <source src="../videos/habilidades_profesionales.MOV" type="video/MOV">
+              <source src="../videos/habilidades_profesionales.avi" type="video/avi">
+              <source src="../videos/habilidades_profesionales.Ogg" type="video/OGG">
+                Tu navegador no soporta el video
+            </video>
+        </article>
+        <br>
+        <article>
+          <h3>Hobbies</h3>
+            <audio controls>
+              <source src="../audios/hobbies.m4a" type="audio/m4a">
+              <source src="../audios/hobbies.mp3" type="audio/mp3">
+                Tu navegador no soporta el audio
+            </audio>
+        </article>
     </section>
     <footer>
       <p>Si tienen alguna duda o consulta porfavor no duden en contactarme:</p>
